<resources>
    <string name="app_name">cakecal</string>
    <string name="recipes">Recipes</string>
    <string name="calculate">Calculate</string>
    <string name="settings">Settings</string>
    <string name="signin">SignIn</string>
    <string name="login">LogIn</string>
    <string name="exit">Exit</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcometv">Welcome</string>
    <string name="add">Add</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="title">Title</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="description">Description</string>
    <string name="steps">Steps</string>
    <string name="about">About</string>
    <string name="table">Table of coefficients for different circumference diameters</string>
    <string name="the_form_from_the_recipe">The form from the recipe</string>
    <string name="my_form">My form</string>
    <string name="width">Width</string>
    <string name="diameter">Diameter</string>
    <string name="length">Length</string>
    <string name="about_app">In this application you can find a list of baking recipes, and if you do not need it, you
        can add your own. If you found something you liked, you have 2 ways: either add to the saved ones and cook later,
        or look at the recipe page, click the "calculating" button, then select your shape and from the recipe, enter the size,
        click the "calculating" button and use the amount of ingredients that is shown on the screen. Have a good cooking!</string>

    <string-array name="form_array">
        <item>Round</item>
        <item>Rectangular</item>
        <item>Square</item>
    </string-array>

</resources>